# snap

./: .gitignore  README.md  generate-samples.sh  pyproject.toml
snatch/: __init__.py
src/snap/: __init__.py
src/snatch/: __init__.py
