[project]
name = "snatch"
version = "1.1.0"
description = "Generate presentable images of code snippets from the terminal"
authors = [{name = "hl-valdemar", email = "valdemar.lorenzen@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.55.0",
    "pygments>=2.19.2",
    "pyperclipimg>=0.2.0",
]

[project.scripts]
snatch = "snatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
